[package]
name = "scale-info"
description = "Info about SCALE encodable Rust types"
include = ["Cargo.toml", "src/**/*.rs", "README.md", "LICENSE"]

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true
categories.workspace = true

[dependencies]
bitvec = { version = "1", default-features = false, features = ["alloc"], optional = true }
cfg-if = "1.0"
scale-info-derive = { version = "2.11.3", path = "derive", default-features = false, optional = true }
serde = { version = "1", default-features = false, optional = true, features = ["derive", "alloc"] }
derive_more = { version = "0.99.1", default-features = false, features = ["from"] }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
schemars = { version = "0.8", optional = true }

[dev-dependencies]
scale-info-derive = { version = "2.11.3", path = "derive" }

[features]
default = ["std"]
std = [
    "bitvec?/std",
    "scale/std",
]
derive = [
    "scale-info-derive"
]
# Include rustdoc strings in the type metadata.
docs = [
    "scale-info-derive/docs"
]
# Enables decoding and deserialization of portable scale-info type metadata.
decode = [
    "scale/full"
]
# Enables type information for bitvec types, matching the name of the parity-scale-codec feature.
bit-vec = [
    "bitvec"
]
# Enables JSON Schema generation.
schema = [
    "std",
    "schemars"
]

[workspace]
members = [
    "derive",
    "test_suite",
]

[workspace.package]
version = "2.11.3"
authors = [
    "Parity Technologies <admin@parity.io>",
    "Centrality Developers <support@centrality.ai>",
]
edition = "2021"
rust-version = "1.60.0"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/paritytech/scale-info"
documentation = "https://docs.rs/scale-info"
homepage = "https://www.parity.io/"
categories = ["no-std", "encoding"]
