[package]
name = "scale-info-derive"
version = "0.2.1"
authors = ["Parity Technologies <admin@parity.io>", "Centrality Developers <support@centrality.ai>"]
edition = "2018"

license = "Apache-2.0"
repository = "https://github.com/paritytech/scale-info"
documentation = "https://docs.rs/scale-info"
homepage = "https://www.parity.io/"
description = "Derive type info for SCALE encodable types"
categories = ["no-std", "encoding"]

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = { version = "1.0", features = ["derive"] }
proc-macro2 = "1.0"
