[package]
name = "scale-info-derive"
description = "Derive type info for SCALE encodable types"

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true
categories.workspace = true

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = { version = "1.0", features = ["derive", "visit", "visit-mut", "extra-traits"] }
proc-macro2 = "1.0"
proc-macro-crate = "3"

[features]
default = ["docs"]
# Include code docs in type metadata.
docs = []
