[package]
name = "scale-info-test-suite"
version = "0.0.0"
authors = [
    "Parity Technologies <admin@parity.io>",
    "Centrality Developers <support@centrality.ai>",
]
edition = "2021"
publish = false

license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Deliberately renamed from scale-info to test that `crate` attr works.
info = { package = "scale-info", path = "..", features = ["derive", "serde", "decode"] }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
serde = "1.0"
serde_json = "1.0"
pretty_assertions = "0.6.1"
trybuild = "1.0.54"
